syntax = "proto3";

package hero;

// The Hero service definition.
service HeroService {
  // Sends a greeting
  rpc GetHero (HeroRequest) returns (HeroResponse) {}
}

// The request message containing the user's name.
message HeroRequest {
  string id = 1;
}

// The response message containing the greetings.
message HeroResponse {
  string name = 1;
}
